<resources>
    <string name="app_name">Yellow</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>

    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="birthday">Birthday:</string>
    <string name="age">Age:</string>
    <string name="email_address">Email Address:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="address">Address:</string>
    <string name="contact_person">Contact Person:</string>
    <string name="contact_person_s_phone_number">Contact person\'s mobile:</string>
</resources>